# mini-os

./: .gitignore  rust-toolchain.toml
os/: Cargo.toml  Makefile  build.rs
os/src/: batch.rs  config.rs  console.rs  entry.asm  lang_items.rs  linker.ld  loader.rs  logging.rs  main.rs  sbi.rs  stack_trace.rs  sync.rs  timer.rs
os/src/boards/: qemu.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/task/: context.rs  mod.rs  switch.S  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs  trap.S
user/: Cargo.toml  Makefile  README.md  build.py
user.bckp/: Cargo.toml
user.bckp/.cargo/: config.toml
user.bckp/src/: console.rs  syscall.rs
user/src/: console.rs  lib.rs  linker.ld  syscall.rs
